[package]
name = "lumen_derive"
version = "0.1.0"
edition = "2024"
authors = ["Aditya Chaturvedi"]
license = "Apache-2.0"
description = "A fast and minimal syntax highlighting library"
repository = "https://github.com/grapesalt/lumen"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"